docroot/themes/custom/transac/alshaya_hnm/sass/components/products/_product-detail.scss
// Layout of the detail page
.nodetype--acq_product {
  #backtotop {
    &.backtotop-nofooter {
      @include breakpoint($only-mobile) {
        z-index: 5;
        line-height: 45px;

        &::after {
          margin-top: -2.4rem;
        }
      }
    }
  }
}

// Title wrapper
.content {
  &__title_wrapper {
    h1,
    h1 span {
      font-family: $hnm-regular;
      font-weight: normal;
      font-size: 1.125rem;
      color: $page_title;
      margin-top: 0;

      @include breakpoint($only-mobile) {
        font-size: 1.3125rem;
        width: 100%;
        letter-spacing: -0.6px;
        margin-bottom: -0.1875rem;
      }
    }

    .vat-text {
      @include breakpoint($only-mobile) {
        display: inline-block;
      }
    }

    .price--discount {
      @include breakpoint($only-mobile) {
        font-size: 0.6875rem;
        font-family: $hnm-demibold;
      }
    }

    .content--item-code {
      @include breakpoint($only-mobile) {
        display: none;
      }
    }

    .price {
      color: $pdp_product_price;
      font-family: $hnm-demibold;
      font-size: 0.9375rem;

      @include breakpoint($only-mobile) {
        font-size: 0.875rem;
      }
    }

    .content--item-code {
      color: $pdp_product_itemcode;
    }
  }
}

// SideBar content theming
.content__sidebar {
  .mobile-content-wrapper {
    .content--item-code.mobile-only {
      display: none;

      @include breakpoint($only-mobile) {
        display: block;
        font-size: 0.75rem;
        text-align: center;
        margin-top: 1.4375rem;
      }
    }

    .sharethis-label.mobile-only {
      display: none;

      @include breakpoint($only-mobile) {
        display: block;
        font-size: 0.8125rem;
        letter-spacing: 1px;
        font-family: $hnm-bold;
        text-align: center;
        color: $pdp_share_this_label_mobile;
        text-transform: uppercase;
        margin-top: 2.5rem;

        @include arabic-letter-spacing;
      }
    }
  }

  .short-description-wrapper {
    @include breakpoint($only-mobile) {
      text-align: center;

      .content--short-description > h2 {
        display: none;
      }

      .field__content {
        line-height: normal;
        padding-top: 2.6875rem;
      }
    }
  }

  .form-item-configurables-article-castor-id {
    @include breakpoint($only-mobile) {
      background: $pdp_color_swatch_mobile_bg;
      margin-left: -0.5rem;
      margin-right: -0.5rem;
      padding: 0 0.5rem !important;
      margin-bottom: 2.375rem;
    }
  }
}

.form-item-configurables-article-castor-id {
  .select2Option .select-buttons li {
    a[data-swatch-type=miniature_image] {
      max-width: 3rem;
      padding: 0;
      border: 1px solid $pdp_swatch_border;
      background: none;

      &.picked {
        border: 1px solid $pdp_swatch_selected_border;
        background: none;
      }

      &:hover {
        &::after {
          content: '';
          background-color: $pdp_swatch_hover;
          position: absolute;
          top: 0;
          bottom: 0;
          #{$left}: 0;
          #{$right}: 0;
        }
      }
    }
  }
}

.basic-details-wrapper .field--name-field-skus {
  .form-item-configurables-article-castor-id {
    label {
      @include u-visibility(none);
    }
  }

  .form-item-configurables-size {
    @include breakpoint($only-mobile) {
      @include select-wrapper(12.3125rem);

      padding: 0;
      margin-top: 0.5em;
      position: relative;
      z-index: 3;
      width: 100%;
      min-height: 2.188rem;

      &::after {
        top: 0.875rem;
        z-index: 1;
      }

      label {
        @include u-visibility(none);

        position: absolute;
        top: -1rem;
        font-size: 0.6875rem;
        padding: 0.3125rem 0;
        padding-#{$right}: 1.25rem;
        #{$left}: 0;
      }

      select.form-select {
        @include select-style(12.3125rem);

        width: 100%;
      }
    }

    @include breakpoint($only-tablet) {
      @include select-wrapper(12.3125rem);

      padding: 0;
      margin-top: 0.5em;
      position: relative;
      z-index: 3;
      width: 100%;
      min-height: 2.188rem;

      &::after {
        top: 0.5rem;
        z-index: 1;
        display: none;
      }

      label {
        @include u-visibility(none);

        position: absolute;
        top: -1rem;
        font-size: 0.6875rem;
        padding: 0.3125rem 0;
        padding-#{$right}: 1.25rem;
        #{$left}: 0;
      }

      select.form-select {
        @include select-style(12.3125rem);

        width: 100%;
      }
    }
  }
}

.description-wrapper {
  .composition-wrapper,
  .care-instructions-wrapper,
  .concept-wrapper,
  .warning-wrapper {
    color: $grey7;
    margin-bottom: 0.625rem;
    margin-top: 0.75rem;

    .composition-label,
    .care-instructions-label,
    .concept-label,
    .warning-label {
      @include arabic-letter-spacing;

      font-family: $hnm-demibold;
      color: $hnm-black-two;
      text-transform: uppercase;
      letter-spacing: 0.5px;
    }

    ul {
      padding-#{$left}: 0;
      list-style: none;
      margin: 0;
    }
  }

  .field {
    &__label {
      font-size: 0.875rem;
      font-family: $hnm-bold;
      text-transform: uppercase;
      font-weight: normal;
      color: $title;
    }
  }

  a {
    font-family: $hnm-regular;
    font-size: 0.875rem;
    line-height: 1.83;
    color: $hnm-black-two;
  }

  strong {
    font-weight: normal;
    font-family: $hnm-bold;
    color: $content_link_color;
  }

  .desc-label {
    @include arabic-letter-spacing;

    font-family: $hnm-demibold;
    font-weight: normal;
    color: $title;
    text-transform: uppercase;
    letter-spacing: 0.5px;
    font-size: 0.875rem;
    margin-top: 0;
    margin-bottom: 0;
  }

  .show-less-link {
    font-family: $arial;
    color: $secondary_link;
  }
}
/* ... */

