CORE-3238: Correctig spacing in new H&M mobile PDP and line hight correction on checkout login mobile.

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/components/products/_product-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/components/products/_product-detail.scss
@@ -28,8 +28,7 @@
       @include breakpoint($only-mobile) {
         font-size: 1.3125rem;
         width: 100%;
-        letter-spacing: -0.6px;
-        margin-bottom: -0.1875rem;
+        margin-bottom: 0.125rem;
       }
     }
 
